--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
   </div> -->
   <div class="box">
       <h3>Contact info</h3>
-      <p><i class="fa fa-map-marker" aria-hidden="true"></i>    Nairobi, Kawangware 10012</p>
-      <p><i class="fa fa-envelope" aria-hidden="true"></i>   foodiefiesta@gmail.com</p>
-      <p><i class="fa fa-phone-square" aria-hidden="true"></i>   +254-724267323</p>
-      <p><i class="fa fa-phone-square" aria-hidden="true"></i>   +254-787533222</p>
+      <p><i class="fa fa-map-marker" aria-hidden="true"></i>   Komarock Nairobi</p>
+      <p><i class="fa fa-envelope" aria-hidden="true"></i>   foodieapp@gmail.com</p>
+      <p><i class="fa fa-phone-square" aria-hidden="true"></i>   +254-714427473</p>
+      <p><i class="fa fa-phone-square" aria-hidden="true"></i>   +254-774434202</p>
   </div>
   <div class="box">
 <h3>Branch location</h3>
@@ -115,12 +115,12 @@
   </div>
   <div class="box">
       <h3>Follow us</h3>
-      <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>      Instagram</a><br>
-      <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>       Facebook</a><br>
+      <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a><br>
+      <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>  Facebook</a><br>
      
       <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>           Twitter</a><br>
       </div>
-  <h1 class="credit">Created by<a class="fiesta" href="#">FoodieFiesta</a> all rights reserved.</h1>
+  <h1 class="credit">Created by<a class="fiesta" href="#">JAMES' RESTAURANT</a> all rights reserved.</h1>
  
 </div>
 
