--- a/menu.html
+++ b/menu.html
@@ -233,10 +233,10 @@
     </div> -->
     <div class="box">
         <h3>Contact info</h3>
-        <p><i class="fa fa-map-marker" aria-hidden="true"></i>    Nairobi, Kawangware 10012</p>
-        <p><i class="fa fa-envelope" aria-hidden="true"></i>   foodiefiesta@gmail.com</p>
-        <p><i class="fa fa-phone-square" aria-hidden="true"></i>   +254-724267323</p>
-        <p><i class="fa fa-phone-square" aria-hidden="true"></i>   +254-787533222</p>
+        <p><i class="fa fa-map-marker" aria-hidden="true">Komarock Nairobi</i></p>
+        <p><i class="fa fa-envelope" aria-hidden="true"> musyokajames430@gmail.com</i></p>
+        <p><i class="fa fa-phone-square" aria-hidden="true">   +254-724267323</i></p>
+        <p><i class="fa fa-phone-square" aria-hidden="true">  +254-787533222</i></p>
     </div>
     <div class="box">
   <h3>Branch location</h3>
@@ -260,7 +260,7 @@
         <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>       Facebook</a><br>
         <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>           Twitter</a><br>
         </div>
-    <h1 class="credit">Created by<a class="fiesta" href="#">FoodieFiesta</a> all rights reserved.</h1>
+    <h1 class="credit">Created by<a class="fiesta" href="#">JAMES RESTAURANT</a> all rights reserved.</h1>
   </div>
     
        
