--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
   </div> -->
   <div class="box">
       <h3>Contact info</h3>
-      <p><i class="fa fa-map-marker" aria-hidden="true"></i>   Komarock Nairobi</p>
-      <p><i class="fa fa-envelope" aria-hidden="true"></i>   foodieapp@gmail.com</p>
-      <p><i class="fa fa-phone-square" aria-hidden="true"></i>   +254-714427473</p>
-      <p><i class="fa fa-phone-square" aria-hidden="true"></i>   +254-774434202</p>
+      <p><i class="fa fa-map-marker" aria-hidden="true">   Komarock Nairobi</i></p>
+      <p><i class="fa fa-envelope" aria-hidden="true">   musyokajames430@gmail.com</i></p>
+      <p><i class="fa fa-phone-square" aria-hidden="true">   +254-714427473</i></p>
+      <p><i class="fa fa-phone-square" aria-hidden="true"> +254-774434202</i></p>
   </div>
   <div class="box">
 <h3>Branch location</h3>
