--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
   </div> -->
   <div class="box">
       <h3>Contact info</h3>
-      <p><i class="fa fa-map-marker" aria-hidden="true">   Komarock Nairobi</i></p>
-      <p><i class="fa fa-envelope" aria-hidden="true">   musyokajames430@gmail.com</i></p>
-      <p><i class="fa fa-phone-square" aria-hidden="true">   +254-714427473</i></p>
-      <p><i class="fa fa-phone-square" aria-hidden="true"> +254-774434202</i></p>
+      <p><i class="fa fa-map-marker" aria-hidden="true">Komarock Nairobi</i></p>
+      <p><i class="fa fa-envelope" aria-hidden="true">musyokajames430@gmail.com</i></p>
+      <p><i class="fa fa-phone-square" aria-hidden="true">+254-714427473</i></p>
+      <p><i class="fa fa-phone-square" aria-hidden="true">+254-774434202</i></p>
   </div>
   <div class="box">
 <h3>Branch location</h3>
@@ -120,7 +120,7 @@
      
       <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>           Twitter</a><br>
       </div>
-  <h1 class="credit">Created by<a class="fiesta" href="#">JAMES' RESTAURANT</a> all rights reserved.</h1>
+  <h1 class="credit">Created by<a class="fiesta" href="#">JAMES</a> all rights reserved.</h1>
  
 </div>
 
