--- a/menu.html
+++ b/menu.html
@@ -260,7 +260,7 @@
         <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>       Facebook</a><br>
         <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>           Twitter</a><br>
         </div>
-    <h1 class="credit">Created by<a class="fiesta" href="#">JAMES RESTAURANT</a> all rights reserved.</h1>
+    <h1 class="credit">Created by<a class="fiesta" href="#">JAMES</a> all rights reserved.</h1>
   </div>
     
        
