--- a/order.html
+++ b/order.html
@@ -74,7 +74,7 @@
             <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>       Facebook</a><br>
             <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>           Twitter</a>
             </div>
-        <h1 class="credit">Created by<a class="food" href="#">  JAMES RESTAURANT</a>   all rights reserved.</h1>
+        <h1 class="credit">Created by<a class="food" href="#">  JAMES</a>   all rights reserved.</h1>
       </div>
 
       <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
