--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      <br>prepared meals and snacks.
      Order now and experience the taste of quality food!</p>
    <div class="button">
-     <button>Order Now</button>
+    <a href="order.html">Order</a>
      <button class="btn">Explore More</button>
    </div>
 
